<resources>
    <string name="app_name">Assignment2</string>
    <string name="title">Match Four</string>
    <string name="hint">Enter your name</string>
    <string name="rules_button">View Rules</string>
    <string name="start_button">Start Game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules_title">Game Rules</string>
    <string name="rules_text">Welcome to Match 4!\nYou will be playing as the red tiles against a CPU who will be using yellow tiles.\nYou win when you connect four squares in a row diagonally, horizontally, or vertically.\nPress the restart button to make the board blank after each game.\nPress the home button to go back to the home screen.</string>
    <string name="back_button">Home</string>
    <string name="reset_button">Reset</string>
</resources>