<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/button_color"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/rulesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_text"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:textColor="@color/background_color"
        android:layout_below="@id/rulesText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_color"/>

</RelativeLayout>
